--- a/receipe/lasagna.html
+++ b/receipe/lasagna.html
@@ -7,7 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Receipe</h1>
-    <a href="./receipe/lasagna.html">Lasagna</a>
+    <h1>Lasagna</h1>
 </body>
 </html>
