added content to the lasagna page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <h1>Odin Receipe</h1>
-    <a href="./receipe/lasagna.html">Lasagna</a>
+    <ul>
+    <li><a href="./receipe/lasagna.html">Lasagna</a></li>
+    
+    </ul>
 </body>
 </html>
